--- a/bedrock/web/app/themes/can_view/src/asset/css/variable.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/variable.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&display=swap');
+
 //COULEUR
 $noir: #1D1A1C;
 $blanc: #F7FFFB;
 $bleu-primary: #96D2D9;
-$bleu-form  : #87AACA;
+$bleu-form : #87AACA;
 
 
 //POLICE
-$police-global: DM Sans, sans-serif;
+$police-global: 'DM Sans', sans-serif;
