--- a/bedrock/web/app/themes/can_view/src/asset/css/style.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/style.scss
@@ -49,7 +49,7 @@ img {
     }
 
     .logo {
-      max-width: 75px;
+      max-width: 175px;
     }
 
     .right {
@@ -65,6 +65,37 @@ img {
           color: v.$noir;
         }
       }
+    }
+  }
+}
+
+
+//FOOTER
+
+#colophon{
+  background-color: v.$blanc;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3rem 2rem;
+  .logo{
+    max-width: 175px;
+  }
+  .fine-print{
+    ul{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    p{
+      color: v.$bleu-form;
+    }
+  }
+  .social{
+    display: flex;
+    gap: 1rem;
+    img{
+      max-width: 30px;
     }
   }
 }
