--- a/bedrock/web/app/themes/can_view/src/asset/css/variable.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/variable.scss
@@ -3,6 +3,10 @@ $noir: #1D1A1C;
 $blanc: #F7FFFB;
 $bleu-primary: #96D2D9;
 $bleu-form  : #87AACA;
+$bleu-btn : #00A795;
+$vert-pastel : #87DE9E;
+$rose-pastel : #F6CBFD;
+$orange-pastel : #FFD36E;
 
 
 //POLICE
