homepage CSS + administrabilité des images config

--- a/bedrock/web/app/themes/can_view/src/asset/css/variable.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/variable.scss
@@ -7,6 +7,7 @@ $bleu-btn : #00A795;
 $vert-pastel : #87DE9E;
 $rose-pastel : #F6CBFD;
 $orange-pastel : #FFD36E;
+$vert-fonce : #2F4B3D;
 
 
 //POLICE
