--- a/bedrock/web/app/themes/can_view/src/asset/css/style.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/style.scss
@@ -105,7 +105,6 @@ img {
           h1{
             font-size: 67px;
             color: v.$blanc;
-
           }
 
           p{
@@ -138,7 +137,7 @@ img {
 
             li{
               img{
-                border-radius: 5px;
+                border-radius: 15px;
               }
             }
           }
@@ -148,7 +147,7 @@ img {
     }
     .separator{
       border: 1px solid v.$noir;
-      width: 75%;
+      width: 90%;
       display: flex;
     }
 
@@ -160,14 +159,12 @@ img {
   .wrap {
     display: flex;
     justify-content: center;
-    /*align-items: center;*/
     flex-direction: column;
-    /*gap: 6rem;*/
+    gap: 6rem;
 
     .content{
       display: flex;
       justify-content: flex-start;
-      align-items: flex-start;
       flex-direction: column;
       gap: 2rem;
 
@@ -175,7 +172,7 @@ img {
 
         h1{
           font-size: 51px;
-          color: v.$noir;
+          color: v.$vert-fonce;
         }
         h3{
           font-size: 32px;
@@ -183,32 +180,301 @@ img {
         }
       }
       .infos{
+        width: 100%;
         display: flex;
         justify-content: space-between;
 
+
+
         .info_1{
           background-color: v.$bleu-primary;
-          border-radius: 5px;
+          border-radius: 15px;
+          display: flex;
+          justify-content: space-between;
+          flex-direction: column;
+          padding: 3rem 2rem;
+          gap: 4rem;
+          width: 260px;
+
+
+          .titre{
+            h2{
+              font-size : 32px;
+              color: v.$noir;
+            }
+          }
+          .texte {
+            p{
+              font-size: 18px;
+              color: v.$noir;
+              text-align: justify;
+            }
+          }
         }
         .info_2{
           background-color: v.$vert-pastel;
-          border-radius: 5px;
+          border-radius: 15px;
+          display: flex;
+          justify-content: space-between;
+          flex-direction: column;
+          padding: 2rem 2rem 3rem 2rem;
+          gap: 4rem;
+          width: 260px;
+
+          .titre{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            h2{
+              font-size : 20px;
+              color: v.$noir;
+              width: 75%;
+            }
+            .icon{
+              background-color: v.$blanc;
+              border-radius: 90px;
+              padding: 1rem;
+            }
+          }
+          .texte {
+            a{
+              display: flex;
+              justify-content: center;
+              background-color: v.$noir;
+              padding: 1rem 2rem;
+              border-radius: 90px;
+              color: v.$blanc;
+            }
+          }
+
         }
         .info_3{
           background-color: v.$rose-pastel;
-          border-radius: 5px;
+          border-radius: 15px;
+          display: flex;
+          justify-content: space-between;
+          flex-direction: column;
+          padding: 3rem 2rem;
+          gap: 4rem;
+          width: 260px;
+          .titre{
+
+            h2{
+              font-size : 32px;
+              color: v.$noir;
+            }
+          }
+          .texte {
+            p{
+              font-size: 18px;
+              color: v.$noir;
+              text-align: justify;
+            }
+          }
         }
         .info_4{
           background-color: v.$orange-pastel;
-          border-radius: 5px;
+          border-radius: 15px;
+          display: flex;
+          justify-content: space-between;
+          flex-direction: column;
+          padding: 2rem 2rem 3rem 2rem;
+          gap: 4rem;
+          width: 260px;
+
+          .titre{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            h2{
+              font-size : 20px;
+              color: v.$noir;
+              width: 75%;
+            }
+            .icon{
+              background-color: v.$blanc;
+              border-radius: 90px;
+              padding: 1rem;
+
+            }
+
+          }
+          .texte {
+            a{
+              display: flex;
+              justify-content: center;
+              background-color: v.$noir;
+              padding: 1rem 2rem;
+              border-radius: 90px;
+              color: v.$blanc;
+            }
+          }
         }
       }
     }
 
     .separator{
       border: 1px solid v.$noir;
-      width: 75%;
+      width: 90%;
+      margin: 0 auto;
 
     }
   }
+}
+#configuration {
+  padding: 1rem 0;
+  background: v.$blanc;
+  .wrap{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 6rem;
+    .content{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 2rem;
+      .titles{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1{
+          font-size: 51px;
+          color: v.$vert-fonce;
+        }
+        p{
+          font-size: 22px;
+          color: #469F5D;
+        }
+      }
+      .onglets{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .onglet_1{
+          .image{
+            img{
+              border-radius: 15px;
+            }
+
+            p{
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: #08BCA9;
+              padding: 1rem 0;
+            }
+          }
+          .titre{
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+
+            h3{
+              font-size: 22px;
+              color: #51826A;
+            }
+            p{
+              font-size: 14px;
+              color: v.$noir;
+            }
+          }
+        }
+        .onglet_2{
+          .image{
+            img{
+              border-radius: 15px;
+            }
+            p{
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: #08BCA9;
+              padding: 1rem 0;            }
+          }
+          .titre{
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+
+
+            h3{
+              font-size: 22px;
+              color: #51826A;
+            }
+            p{
+              font-size: 14px;
+              color: v.$noir;
+            }
+          }
+
+        }
+        .onglet_3{
+          .image{
+            img{
+              border-radius: 15px;
+            }
+
+            p{
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: #08BCA9;
+              padding: 1rem 0;            }
+          }
+          .titre{
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+
+
+            h3{
+              font-size: 22px;
+              color: #51826A;
+            }
+            p{
+              font-size: 14px;
+              color: v.$noir;
+            }
+          }
+        }
+      }
+    }
+    .separator{
+      border: 1px solid v.$noir;
+      width: 90%;
+      margin: 0 auto;
+
+    }
+  }
+}
+
+#qui_somme_nous{
+  .transition{
+    padding: 5rem 0;
+    background: linear-gradient(v.$blanc, v.$bleu-primary);
+  }
+  .wrap{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 6rem;
+    .content{
+
+    }
+    .separator {
+      border: 1px solid v.$blanc;
+      width: 90%;
+      margin: 0 auto;
+    }
+  }
+
 }
