--- a/bedrock/web/app/themes/can_view/src/asset/css/style.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/style.scss
@@ -394,7 +394,8 @@ img {
               justify-content: center;
               align-items: center;
               color: #08BCA9;
-              padding: 1rem 0;            }
+              padding: 1rem 0;
+            }
           }
           .titre{
             display: flex;
@@ -468,6 +469,32 @@ img {
     flex-direction: column;
     gap: 6rem;
     .content{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 2rem;
+      .titles{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+
+        h1{
+          font-size: 51px;
+          color: v.$blanc;
+        }
+
+        p{
+          font-size: 14px;
+          color: #469F5D;
+        }
+      }
+      .video{
+        iframe{
+          border-radius: 15px;
+        }
+      }
 
     }
     .separator {
