--- a/bedrock/web/app/themes/can_view/src/asset/css/allform.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/allform.scss
@@ -124,7 +124,7 @@ form {
     flex-direction: row;
     justify-content: space-evenly;
     padding: 7px 0;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 50px;
     padding: 1rem 0;
 }
@@ -186,6 +186,8 @@ form {
 .coolinput input[type=text].input,
 .coolinput input[type=email].input,
 .coolinput input[type=password].input,
+.coolinput input[type=date].input,
+.coolinput input[type=number].input,
 #motivations,
 .searchInput,
 .box_form {
@@ -201,6 +203,8 @@ form {
 .coolinput input[type=text].input:focus,
 .coolinput input[type=email].input:focus,
 .coolinput input[type=password].input:focus,
+.coolinput input[type=date].input:focus,
+.coolinput input[type=number].input:focus,
 #motivations:focus,
 .searchInput:focus,
 .box_form:focus {
@@ -208,7 +212,8 @@ form {
 }
 
 .inline_form a,
-.inline_form button {
+.inline_form button,
+.inline_form input[type=submit] {
     border-radius: 10px;
     border: 3px solid #D4DFEA;
     background: v.$bleu_form;
@@ -356,7 +361,7 @@ textarea#motivations {
     font-size: 0.75rem;
     border: 3px v.$bleu_form solid;
     border-radius: 9px;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
 
     span {
         font-size: 15px;
@@ -401,10 +406,7 @@ textarea#motivations {
     width: 30%;
 }
 
-.deuxieme_etape,
-.troisieme_etape {
-    display: none;
-}
+
 
 .loader_etape {
     display: none;
@@ -441,3 +443,7 @@ p.browse {
     margin: 0 25px;
 }
 
+.deuxieme_etape,
+.troisieme_etape {
+    display: block;
+}
