--- a/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
@@ -185,6 +185,36 @@ img {
           width: 90%;
         }
       }
+      .texte{
+        padding: 3rem 1rem 1rem 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 5rem;
+
+        p{
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 32px;
+          text-align: left;
+        }
+
+        table{
+          tr{
+            .titre{
+              background-color: v.$bleu-primary;
+              color: v.$blanc;
+            }
+            td{
+              font-size: 20px;
+              font-weight: 500;
+              line-height: 32px;
+              text-align: center;
+            }
+          }
+
+        }
+      }
+
     }
   }
 }
