--- a/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
@@ -82,139 +82,177 @@ img {
         }
       }
     }
-    .infos_principal{
-      background-color: v.$blanc;
-      box-shadow: 5px 5px 5px #4c6066;
-      z-index: 99;
+    .infos{
+      display: flex;
+      align-items: center;
+      .infos_principal{
+        background-color: v.$blanc;
+        box-shadow: 5px 5px 5px #4c6066;
+        z-index: 99;
 
-
-      .photo{
-        width: 362px;
-      }
-      .text{
-        padding: 2rem 1rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        .titres{
-          display: flex;
-          justify-content: space-between;
-          flex-direction: column;
-          gap: 1rem;
-
-          h2{
-            font-size: 20px;
-            font-weight: 700;
-            line-height: 32px;
-            text-align: center;
-            color: v.$noir;
-          }
-
-          h3{
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 32px;
-            text-align: center;
-            color: v.$bleu-primary;
-
-          }
+        .photo{
+          width: 362px;
         }
-        .liens {
-          display: flex;
-          justify-content: center;
-          gap: 1rem;
-          padding: 1rem 0 3rem 0;
-
-
-          a{
-            padding-bottom: 5px;
-            border-bottom: solid 2px v.$blanc;
-            img{
-              width: 15px;
-            }
-          }
-          a:hover{
-            border-bottom: solid 2px v.$noir;
-          }
-        }
-        .separator{
-          border: 1px solid v.$noir ;
-          width: 90%;
-
-        }
-        .lien_pdf{
-          padding: 1rem 0;
+        .text{
+          padding: 2rem 1rem;
           display: flex;
           flex-direction: column;
           align-items: center;
+          .titres{
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            gap: 1rem;
 
-          a{
-            padding-bottom: 5px;
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 32px;
-            text-align: center;
-            color: v.$noir;
-            border-bottom: solid 2px v.$blanc;
-          }
-          a:hover{
-            border-bottom: solid 2px v.$noir;
-          }
-        }
-      }
-    }
-    .infos_modulable{
-      background-color: white;
-      border-radius: 0 15px 15px 0;
-      padding: 2rem;
-
-      .title{
-        h1{
-          font-size: 25px;
-          font-weight: 700;
-          line-height: 40px;
-          color: v.$noir;
-          padding:0 1rem 1rem 1rem;
-
-          span{
-            color: v.$bleu-primary;
-          }
-        }
-        .separator{
-          border: 1px solid v.$noir ;
-          width: 90%;
-        }
-      }
-      .texte{
-        padding: 3rem 1rem 1rem 1rem;
-        display: flex;
-        flex-direction: column;
-        gap: 5rem;
-
-        p{
-          font-size: 20px;
-          font-weight: 500;
-          line-height: 32px;
-          text-align: left;
-        }
-
-        table{
-          tr{
-            .titre{
-              background-color: v.$bleu-primary;
-              color: v.$blanc;
+            h2{
+              font-size: 20px;
+              font-weight: 700;
+              line-height: 32px;
+              text-align: center;
+              color: v.$noir;
             }
-            td{
+
+            h3{
               font-size: 20px;
               font-weight: 500;
               line-height: 32px;
               text-align: center;
+              color: v.$bleu-primary;
+
             }
           }
+          .liens {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            padding: 1rem 0 3rem 0;
 
+
+            a{
+              padding-bottom: 5px;
+              border-bottom: solid 2px v.$blanc;
+              img{
+                width: 15px;
+              }
+            }
+            a:hover{
+              border-bottom: solid 2px v.$noir;
+            }
+          }
+          .separator{
+            border: 1px solid v.$noir ;
+            width: 90%;
+
+          }
+          .lien_pdf{
+            padding: 1rem 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            a{
+              padding-bottom: 5px;
+              font-size: 20px;
+              font-weight: 500;
+              line-height: 32px;
+              text-align: center;
+              color: v.$noir;
+              border-bottom: solid 2px v.$blanc;
+            }
+            a:hover{
+              border-bottom: solid 2px v.$noir;
+            }
+          }
         }
       }
 
+      .infos_modulable{
+        background-color: white;
+        border-radius: 0 15px 15px 0;
+        padding: 2rem;
+        height: 75%;
+
+        .title{
+          h1{
+            font-size: 25px;
+            font-weight: 700;
+            line-height: 40px;
+            color: v.$noir;
+            padding:0 1rem 1rem 1rem;
+
+            span{
+              color: v.$bleu-primary;
+            }
+          }
+          .separator{
+            border: 1px solid v.$noir ;
+            width: 90%;
+          }
+        }
+
+        .profil{
+          .texte{
+            padding: 3rem 1rem 1rem 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 5rem;
+
+            p{
+              font-size: 20px;
+              font-weight: 500;
+              line-height: 32px;
+              text-align: left;
+            }
+
+            table{
+              tr{
+                .titre{
+                  background-color: v.$bleu-primary;
+                  color: v.$blanc;
+                }
+                td{
+                  font-size: 20px;
+                  font-weight: 500;
+                  line-height: 32px;
+                  text-align: center;
+                }
+              }
+            }
+          }
+        }
+
+        .formation{
+          .texte{
+            display: flex;
+            .left_texte{
+              padding: 2rem;
+              display: flex;
+              justify-content: center;
+              flex-direction: column;
+              align-items: center;
+
+
+              .titre{
+                display: flex;
+                gap: 1rem;
+                background-color: v.$bleu-primary;
+                padding: 1rem 2rem;
+
+                h2{
+                  color: v.$blanc;
+                }
+              }
+            }
+            .separator{
+              border: 1px solid v.$noir ;
+              height: 100px;
+            }
+            .right_texte{
+
+            }
+          }
+        }
+      }
     }
   }
 }
