--- a/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
@@ -42,7 +42,6 @@ img {
   padding: 3rem;
   .wrap{
     display: flex;
-    justify-content: space-between;
     align-items: center;
     .sidebar{
       padding-right: 3rem;
@@ -54,6 +53,7 @@ img {
         background-color: v.$blanc;
         padding: 1rem;
         border-radius: 15px;
+        width: 120px;
         a{
           text-align: center;
           display: flex;
@@ -225,11 +225,17 @@ img {
           .texte{
             display: flex;
             .left_texte{
-              padding: 2rem;
+              padding: 1rem;
               display: flex;
-              justify-content: center;
+              justify-content: flex-start;
               flex-direction: column;
               align-items: center;
+              gap: 2rem;
+
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 20px;
+              text-align: center;
 
 
               .titre{
@@ -242,13 +248,44 @@ img {
                   color: v.$blanc;
                 }
               }
+              .content{
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+              }
             }
             .separator{
               border: 1px solid v.$noir ;
-              height: 100px;
+              line-height: 100%;
             }
             .right_texte{
+              padding: 1rem;
+              display: flex;
+              justify-content: flex-start;
+              flex-direction: column;
+              align-items: center;
+              gap: 2rem;
 
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 20px;
+              text-align: center;
+
+              .titre{
+                display: flex;
+                gap: 1rem;
+                background-color: v.$bleu-primary;
+                padding: 1rem 2rem;
+
+                h2{
+                  color: v.$blanc;
+                }
+              }
+              .content{
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+              }
             }
           }
         }
