--- a/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
@@ -346,43 +346,65 @@ img {
       .infos{
         flex-direction: column;
         align-items: center;
+        width: 100%;
 
 
         .infos_principal{
           display: flex;
+          width: 100%;
+
+          .photo{
+
+          }
 
           .text{
             padding: 2rem;
+            align-items: flex-start;
+            text-align: left;
+            width: 50%;
+
+            .titres{
+              align-items: flex-start;
+            }
+
+          }
+          .separator{
+            margin: 0 auto;
+          }
+          .lien_pdf{
+            margin: 0 auto;
           }
         }
         .infos_modulable{
           border-radius: 0 0 15px 15px;
-          width: 500px;
+          width: 90%;
         }
       }
-      /*.sidebar {
-        padding: 0 0 3rem 0;
+
+    }
+  }
+}
+
+@media screen and (max-width: 810px){
+  #profil_details {
+    .wrap {
+      flex-direction: column;
+      .sidebar {
+        width: 100%;
+        padding-right: 0;
+
         .elements{
           flex-direction: row;
-          width: auto;
+          width: 100%;
           padding: 1rem 2rem;
           gap: 2rem;
+          border-radius: 0;
           .separator{
             height: 90px;
             width: 0;
           }
         }
-      }*/
+      }
     }
   }
-}
-@media screen and (max-width: 1040px){
-  #profil_details {
-    .wrap {
-
-    }
-  }
-}
-@media screen and (max-width: 690px){
-
 }
