--- a/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/profilDetails.scss
@@ -347,6 +347,7 @@ img {
         flex-direction: column;
         align-items: center;
         width: 100%;
+        padding: 0 1rem;
 
 
         .infos_principal{
@@ -368,6 +369,9 @@ img {
             }
 
           }
+          .liens{
+            margin: 0 auto;
+          }
           .separator{
             margin: 0 auto;
           }
@@ -387,11 +391,14 @@ img {
 
 @media screen and (max-width: 810px){
   #profil_details {
+    padding: 0 0 3rem 0;
+
     .wrap {
       flex-direction: column;
+
       .sidebar {
         width: 100%;
-        padding-right: 0;
+        padding: 0 0 3rem 0;
 
         .elements{
           flex-direction: row;
@@ -402,6 +409,66 @@ img {
           .separator{
             height: 90px;
             width: 0;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 640px){
+  #profil_details{
+    .wrap{
+      .sidebar{
+        .elements{
+          padding: 10px;
+          gap: 10px;
+          a{
+            font-size: 14px;
+            font-weight: 300;
+            line-height: 20px;
+
+            img{
+              width: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 585px){
+  #profil_details{
+    .wrap{
+      .infos{
+        flex-direction: column-reverse;
+        .infos_principal{
+          flex-direction: column;
+          .photo{
+            width: 100%;
+          }
+          .texte{
+            align-items: center;
+          }
+        }
+        .infos_modulable{
+          border-radius: 15px 15px 0 0;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 380px){
+  #profil_details{
+    .wrap{
+      .sidebar{
+        .elements{
+          display: flex;
+          flex-direction: column;
+
+          .separator{
+            border: 1px solid v.$noir ;
+            width: 90%;
+            height: 0;
           }
         }
       }
