--- a/bedrock/web/app/themes/can_view/src/asset/css/espaceUser.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/espaceUser.scss
@@ -23,7 +23,8 @@
       display: flex;
       justify-content: space-between;
       .photoProfil{
-        width: 600px;
+        max-width: 600px;
+        width: 100%;
         .photo{
           width: 65%;
           margin: 0 auto;
@@ -77,6 +78,118 @@
               .supprime:hover{
                 background-color: white;
                 color: v.$rouge;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1130px) {
+  #espaceUser{
+    .espace{
+      .profil{
+        .photoProfil{
+          .photo{
+            width: 75%;
+          }
+        }
+        .content{
+          .action{
+            ul{
+              flex-direction: column;
+              li{
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  #espaceUser{
+    .espace{
+      .profil{
+        flex-direction: column;
+        .content{
+          width: 100%;
+          .info {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+          }
+          .action{
+            ul{
+              flex-direction: row;
+              li{
+                width: 49%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 620px) {
+  #espaceUser{
+    .espace{
+      padding: 4rem;
+      .profil{
+        .photoProfil{
+          margin-bottom: 1rem;
+        }
+        .content{
+          .info {
+
+          }
+          .action{
+            ul{
+              flex-direction: column;
+              align-items: center;
+              li{
+                width: 90%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 420px) {
+  #espaceUser{
+    .espace{
+      padding: 3rem;
+    }
+  }
+}
+
+@media screen and (max-width: 370px) {
+  #espaceUser{
+    .espace{
+      padding: 2rem;
+      h1{
+        font-size: 22px;
+      }
+      .profil{
+        .content {
+          .info {
+            font-size: 20px;
+          }
+          .action{
+            ul{
+              li{
+                a {
+                  font-size: 16px;
+                }
               }
             }
           }
