--- a/bedrock/web/app/themes/can_view/src/asset/css/allform.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/allform.scss
@@ -226,6 +226,7 @@ form {
     text-transform: capitalize;
     transition: all 300ms ease-in-out;
 
+
     &:hover {
         background: v.$blanc;
         border: 3px solid v.$bleu_form;
@@ -446,4 +447,52 @@ p.browse {
 .deuxieme_etape,
 .troisieme_etape {
     display: none;
+}
+
+
+@media screen and (max-width: 1000px) {
+
+    #all_form .wrap .all_form_container .all_form_left {
+        display: none;
+    }
+
+    .all_form_right {
+        overflow-x: auto;
+        max-height: 100%;
+        min-height: 80vh;
+    }
+}
+
+@media screen and (max-width: 560px) {
+
+    .inline_form {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    form {
+        padding: 0 30px;
+    }
+    .all_form_right .all_form_bar_horizontal img {
+        width: 80%;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
