Reparation de la requete du cv sous format pdf et insertion des images dans le cv sous format pdf plus rectification du css dans l'espace user

--- a/bedrock/web/app/themes/can_view/src/asset/css/espaceUser.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/espaceUser.scss
@@ -22,10 +22,15 @@
     .profil{
       display: flex;
       justify-content: space-between;
+      align-items: center;
       .photoProfil{
+        display: flex;
+        align-items: center;
+        padding: 2rem 1rem;
         width: 600px;
         .photo{
-          width: 65%;
+          object-fit: contain;
+          max-width: 220px;
           margin: 0 auto;
         }
       }
