--- a/bedrock/web/app/themes/can_view/src/asset/css/espaceRecruteur.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/espaceRecruteur.scss
@@ -29,9 +29,14 @@
           border-radius: 10px;
           transition: all 0.3s;
           .photo {
-            max-width: 150px;
             width: 100%;
             background-color: grey;
+            img{
+              object-fit: contain;
+              max-width: 140px;
+              max-height: 140px;
+              margin: 0 auto;
+            }
           }
           .content {
             width: 80%;
@@ -77,11 +82,16 @@
         flex-direction: column;
         align-items: center;
         .cv {
-          width: 85%;
+          width: 100%;
         }
       }
     }
   }
+}
+
+@media screen and (max-width: 975px){
+
+
 }
 
 @media screen and (max-width: 620px) {
