--- a/bedrock/web/app/themes/can_view/src/asset/css/espaceRecruteur.scss
+++ b/bedrock/web/app/themes/can_view/src/asset/css/espaceRecruteur.scss
@@ -35,6 +35,8 @@
               object-fit: contain;
               max-width: 140px;
               max-height: 140px;
+              min-width: 140px;
+              min-height: 140px;
               margin: 0 auto;
             }
           }
